# stoolap

./: .gitignore  AGENTS.md  BLUEPRINT.md  Cargo.toml  ROADMAP.md  ROLES.md  START_HERE.md
benches/: hexary_proof.rs  stark_proof.rs  vector_search.rs
cairo/: build.rs
docs/_docs/sql-commands/: schema-management.md
docs/plans/: 2025-02-28-hexary-proof-design.md  2025-03-01-stark-proof-benchmarks.md  2025-03-01-zk-proofs-integration-design.md  2026-03-08-dfp-differential-fuzzing.md  2026-03-28-rfc-0201-bytea-implementation.md
docs/use-cases/: blockchain-sql-database.md  stark-proof-benchmarks.md  trie-sequential-lookups.md  verifiable-state-proofs.md  zk-proofs-scalability.md
missions/archived/: 001-hexary-proof-data-structures.md  002-nibble-packing-utilities.md  003-bitmap-sibling-reconstruction.md  004-16-way-child-hashing.md  005-hexary-proof-verification.md  006-row-trie-proof-generation.md  007-solana-style-serialization.md  008-parallel-batch-verification.md  009-verification-fixes.md  010-integration-tests.md  0105-trie-extension-fix.md  0106-01-stwo-real-benchmarks.md  011-benchmarks.md  012-documentation-cleanup.md  0201-08-text-column-limit.md  0203-01-commitment-scheme.md
missions/claimed/: 0201-01-stwo-dependency.md  0201-02-cairo-program-types.md  0201-05-prover-interface.md
missions/open/: 0106-stark-proof-benchmarks.md  0201-01-stwo-dependency.md  0201-02-cairo-program-types.md  0201-03-cairo-compiler-integration.md  0201-04-stark-proof-types.md  0201-05-prover-interface.md  0202-02-proof-generation.md  0202-03-proof-verification.md  0203-01-commitment-scheme.md  0203-02-confidential-query-types.md  0203-03-query-execution.md  0203-04-result-verification.md  0204-01-rollup-types.md  0204-02-batch-execution.md  0204-03-batch-submission.md  0204-04-fraud-proofs.md  0204-05-withdrawals.md
rfcs/: 0000-template.md  0101-hexary-merkle-proofs.md  0102-deterministic-types.md  0103-blockchain-consensus.md  0105-trie-extension-key-slicing.md  0106-stark-proof-benchmarks.md  0201-stwo-cairo-integration.md  0202-compressed-proofs.md  0203-confidential-queries.md  0204-l2-rollup.md  README.md
src/: lib.rs
src/api/: database.rs  params.rs  transaction.rs
src/consensus/: block.rs  mod.rs  operation.rs
src/consensus/tests/: block_tests.rs  operation_tests.rs
src/core/: error.rs  mod.rs  schema.rs  types.rs  value.rs
src/determ/: row.rs  tests.rs  value.rs
src/execution/: context.rs  gas.rs  mod.rs  tests.rs
src/executor/: context.rs  cte.rs  ddl.rs  dml.rs  hash_table.rs  mod.rs  query.rs  query_cache.rs  query_classification.rs  statistics.rs  subquery.rs  utils.rs
src/executor/expression/: compiler.rs  ops.rs  program.rs  tests.rs  vm.rs
src/functions/: registry.rs
src/functions/aggregate/: array_agg.rs  avg.rs  compiled.rs  count.rs  max.rs  min.rs  string_agg.rs  sum.rs
src/functions/scalar/: conversion.rs  math.rs  mod.rs  utility.rs
src/optimizer/: bloom.rs
src/parser/: ast.rs  expressions.rs  mod.rs  statements.rs  token.rs
src/pubsub/: event_bus.rs  mod.rs  traits.rs  wal_pubsub.rs
src/rollup/: execution.rs  fraud.rs  mod.rs  submission.rs  types.rs  withdrawal.rs
src/storage/: mod.rs
src/storage/expression/: cast.rs  comparison.rs  compiled.rs
src/storage/index/: btree.rs  hash.rs
src/storage/mvcc/: engine.rs  persistence.rs  snapshot.rs  table.rs  version_store.rs  wal_manager.rs
src/storage/traits/: engine.rs  table.rs
src/storage/vector/: config.rs  merkle.rs  mmap.rs  mod.rs  mvcc.rs  search.rs  segment.rs  snapshot.rs  wal.rs  wal_logger.rs  wal_recovery.rs
src/storage/vector/quantization/: config.rs  distance.rs  mod.rs  product.rs  quantizer.rs  scalar.rs
src/trie/: mod.rs  proof.rs  row_trie.rs  schema_trie.rs
src/trie/tests/: mod.rs  proof_tests.rs  row_trie_tests.rs  schema_trie_tests.rs
src/zk/: bundled.rs  cairo.rs  commitment.rs  compressed.rs  confidential.rs  mod.rs  plugin.rs  proof.rs  prover.rs
src/zk/tests/: integration_tests.rs  mod.rs
stwo-bench/: Cargo.toml  README.md
stwo-bench/benches/: stwo_proof.rs
stwo-bench/src/: main.rs
tests/: aggregate_in_transaction_test.rs  bigint_decimal_integration_test.rs  blob_integration_test.rs  blockchain_integration_test.rs  bugs_regression_test.rs  dfp_integration_test.rs  dqa_integration_test.rs  for_update_test.rs
